# josephbb.github.io

./: .gitignore  .prettierignore  .prettierrc  404.html  CNAME  Gemfile  IDEAS.md  MANAGING.md  README.md  _config.yml  astro.config.mjs  feed.xml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  sitemap.xml
.github/workflows/: deploy.yml
_bibliography/: papers.bib
_data/: citations.yml  cv.yml  repositories.yml  socials.yml
_drafts/: code-and-figures-reference.md  formatting-cheat-sheet.md  post-template.md
_news/: announcement_1.md  announcement_2.md  announcement_3.md  announcement_4.md  announcement_5.md  announcement_6.md  announcement_7.md  announcement_8.md
_pages/: about.md  about_einstein.md  cv.md  projects.md  publications.md  repositories.md  teaching.md
_pages/dropdown/: index.html
_posts/: 2024-06-05-contrarian.md  2024-09-24-protzko.md  2024-09-30-preregrevelation.md  2024-11-13-nosek.md  2024-11-19-nosek.md  2026-07-04-FDR.md
_projects/: 1_project.md
assets/bibliography/: 2018-12-22-distill.bib
assets/css/: bootstrap.min.css  main.css  tailwind.css  (+2 more)
blog/: index.html
cv/: index.html
news/: index.html
notebooks/: .gitignore  README.md  _quarto.yml  flake.nix  justfile  pyproject.toml
notebooks/drafts/: 2026-07-21-signmag.ipynb
notebooks/scripts/: install-deps.sh  nb-to-blog.sh  setup-kernel.sh
people/: index.html
projects/: index.html
publications/: index.html
repositories/: index.html
scripts/: enrich-openalex.mjs
src/: content.config.ts
teaching/: index.html
(+159 files in other folders)
