[project]
name = "site-notebooks"
version = "0.1.0"
description = "Draft Jupyter notebooks that render to Astro blog posts"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyterlab>=4.3",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "nbconvert>=7.16",
    "pymc[nutpie]>=6.0.0",
    "arviz>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "watermark>=2.4",
]

[tool.uv]
package = false
